	* Modified  docbook/Makefile.am, tests/Makefile.am, docbook/clibsummary.xml,
	rivendell/Makefile.am to include the new List System Settings functionality.
	* Added  docbook/rd_listsystemsettings.xml ,rivendell/rd_listsystemsettings.c
	rivendell/rd_listsystemsettings.h, tests/listsystemsettings_test.c
2017-05-22 Todd Baker <bakert@rfa.org>
	* Modified the following files to handle Error Reporting correctly:
	rd_addcart.c, rd_addcut.c, rd_assignschedcode.c, rd_audioinfo.c
	rd_audiostore.c, rd_common.h, rd_copyaudio.c, rd_createticket.c,
	rd_deleteaudio.c, rd_editcart.c, rd_editcut.c, rd_import.c,
	rd_listcart.c, rd_listcarts.c, rd_listcartschedcodes.c, rd_listcut.c,
	rd_listcuts.c, rd_listgroup.c, rd_listgroups.c, rd_listlog.c, rd_listlogs.c,
	rd_listschedcodes.c, rd_listservices.c, rd_listsystemsettings.c, rd_removecart.c,
	rd_removecut.c, rd_trimaudio.c, rd_unassignschedcode.c
2017-06-20 Todd Baker <bakert@rfa.org>
	* Modified rivendell/rd_import.c and rivendell/rd_import.h to use
	the new RD_Import Title Parameter if it is present. Added Title test
	to the test for import_cart. Updated docbook for rdimport.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'rivendell/rd_savelog.c' that caused negative values
	for 'START_POINT', 'END_POINT', 'SEGUE_START_POINT',
	'SEGUE_END_POINT', 'FADEUP_POINT', 'FADEDOWN_POINT',
	'DUCK_UP_GAIN' and 'DUCK_DOWN_GAIN' to be corrupted.
	* Added 'logline_fadeup_gain' and 'logline_fadedown_gain' to the
	'save_logline_values' struct in 'rivendell/rd_savelog.h'.
	* Added 'logline_fadedown_gain' to the 'rd_logline' struct in
	'rivendell/rd_listlog.h'.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rivendell_rd_savelog.c' that caused the
	'TIME_TYPE' value to fail to be saved.
2017-07-25 Todd Baker <bakert@rfa.org>
	* Fixed bug in rivendell/rd_listlogs.h" that was truncating Log Name
2017-07-25 Todd Baker <bakert@rfa.org>
	* Fixed bug in rivendell/rd_listlogs.c" that was truncating Log Name