@@ -281,3 +281,6 @@
 	* Fixed bug in rivendell/rd_listlogs.h" that was truncating Log Name
 2017-07-25 Todd Baker <bakert@rfa.org>
 	* Fixed bug in rivendell/rd_listlogs.c" that was truncating Log Name
+2017-08-16 Todd Baker <bakert@rfa.org>
+	* Fixed Windows DST Time conversion bug in rivendell/rd_common.c
+	* Added Error checking from Web Call in tests/listlogs_test.c
